# compressors

./: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  compressor_deflate.cc  compressor_deflate.h  compressor_io.h  compressor_lz4.cc  compressor_lz4.h  compressor_zstd.cc  compressor_zstd.h  exception.h  likely.h  xxh32_stream.h  xxhash.h
test/: test.cc
